cabal-version:      2.4
name:               aoc2015
version:            0.1.0.0

author:             Alexandru Jercan
maintainer:         jercan_alex27@yahoo.com

extra-source-files:
    CHANGELOG.md
    README.md

executable Aoc2015
    main-is:          Main.hs
    build-depends:    base ^>=4.13.0.0
    other-modules:    Day01
    hs-source-dirs:   src
    default-language: Haskell2010

